# geometry-utils-lib

./: CMakeLists.txt
include/geometry-utils-lib/: numeric.h  quat.h  xform.h
src/: test.cpp
